# sracha-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh  pixi.toml  sracha-big-80350.out  sracha-big-80352.out  sracha-big-80376.out  sracha-big-80377.out  sracha-big-80378.out  test-big-split.sh  test-big.sh  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml  upstream-releases.yml
crates/sracha/: Cargo.toml  build.rs
crates/sracha-core/: Cargo.toml
crates/sracha-core/benches/: decode.rs
crates/sracha-core/src/: accession.rs  error.rs  lib.rs  util.rs
crates/sracha-core/src/compress/: mod.rs
crates/sracha-core/src/download/: mod.rs
crates/sracha-core/src/fastq/: mod.rs
crates/sracha-core/src/pipeline/: blob_decode.rs  config.rs  mod.rs  validate.rs
crates/sracha-core/src/sdl/: mod.rs  response.rs
crates/sracha-core/src/vdb/: blob.rs  cursor.rs  encoding.rs  inspect.rs  kar.rs  kdb.rs  metadata.rs  mod.rs
crates/sracha-core/tests/: pipeline.rs  vdb_inspect.rs
crates/sracha-vdb/: Cargo.toml
crates/sracha-vdb/src/: blob.rs  blob_codecs.rs  dump.rs  lib.rs  row_range.rs
crates/sracha-vdb/tests/: inspect.rs
crates/sracha/src/: cli.rs  main.rs  progress.rs  style.rs  vdb_cmd.rs
docs/: alignment.md  cli.md  getting-started.md  implementation.md  index.md
docs/tapes/: get.tape  help.tape  info.tape  readme.tape
validation/: benchmark.sh  compare_fastq.py  compare_with_fasterq_dump.sh  random_corpus.sh  sample_accessions.sh
