[workspace]
resolver = "2"
members = ["crates/sracha", "crates/sracha-core"]

[workspace.package]
version = "0.1.6"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/rnabioco/sracha-rs"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "rustls", "json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Parallelism + Compression
rayon = "1"
flate2 = "1"
libdeflater = "1"
libdeflate-sys = "1"
crossbeam-channel = "0.5"
zstd = { version = "0.13", features = ["zstdmt"] }

# Progress
indicatif = "0.18"

# Error handling
thiserror = "2"
anyhow = "1"

# Integrity
md-5 = "0.11"
crc32fast = "1"

# Binary parsing
byteorder = "1"
itoa = "1"
memmap2 = "0.9"

# Styling
owo-colors = "4"

# Utils
url = "2"
tempfile = "3"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
sracha-core = { path = "crates/sracha-core" }

# Optimized release build: LTO + single codegen unit for maximum performance
[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

# Debug-friendly release build with symbols
[profile.release-with-debug]
inherits = "release"
strip = false
debug = 2

# Profiling: optimized but no LTO so frames are visible to valgrind/perf
[profile.profiling]
inherits = "release"
lto = false
codegen-units = 16
strip = false
debug = 2

# Fast dev builds
[profile.dev]
opt-level = 0
debug = 2

# Optimized dev dependencies (tests run faster)
[profile.dev.package."*"]
opt-level = 2
