[package]
name = "sracha-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for sracha SRA tools"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rayon.workspace = true
flate2.workspace = true
libdeflater.workspace = true
libdeflate-sys.workspace = true
crossbeam-channel.workspace = true
zstd.workspace = true
indicatif.workspace = true
thiserror.workspace = true
anyhow.workspace = true
md-5.workspace = true
crc32fast.workspace = true
byteorder.workspace = true
itoa.workspace = true
memmap2.workspace = true
url.workspace = true
tempfile.workspace = true
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
flate2.workspace = true
tempfile.workspace = true
