[package]
name = "sracha"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast SRA downloader and FASTQ converter"

[[bin]]
name = "sracha"
path = "src/main.rs"

[dependencies]
sracha-core.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
owo-colors.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
